feat: Accept hotel update notifications.
